--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</nav>
 	</header>
 	<!-- Full width header, after scrolldown then fade down -->
-	<!-- <header></header> -->
+	<!-- <header class="sticky top-0">123</header> -->
 
 	<!-- https://images.pexels.com/photos/1040880/pexels-photo-1040880.jpeg?auto=compress&cs=tinysrgb&w=1200 -->
   	<main>
@@ -48,12 +48,12 @@
   			</div>
   		</section>
 
-  		<section class="py-32 bg-[#FFFFFF]">
+  		<section class="py-32 bg-white">
   			<div class="container m-auto xl:w-[1200px] lg:w-[960px] w-full">
 	  			<div class="flex flex-wrap mb-15">
 	  				<div class="xl:w-1/2 w-full xl:mb-0 mb-10 xl:pe-5 px-3">
 	  					<p class="text-4xl font-bold text-[#343f52] mb-5">What I Do ?</p>
-	  					<p class="text-xl text-[#60697B]" style="line-height: 1.7;">
+	  					<p class="text-xl text-gray-500" style="line-height: 1.7;">
 	  						I'm a front-end web developer with 3 years of experience crafting clean and responsive websites.
 							While front-end is my main focus, I'm also comfortable with back-end development and can work as a full-stack developer when needed.
 							From landing pages to full web apps, I build solutions that are both functional and visually appealing.
@@ -64,7 +64,7 @@
 	  						<li class="mb-7">
 	  							<div class="flex flex-col">
 			  						<div class="flex justify-between items-center">
-			  							<span class="text-md text-gray-500 mb-3">Front-End Development</span>
+			  							<span class="text-md text-gray-500 mb-3">Frontend Development</span>
 			  							<span class="text-gray-500">90%</span>
 			  						</div>
 			  						<div class="relative">
@@ -78,7 +78,7 @@
 	  						<li class="mb-7">
 	  							<div class="flex flex-col">
 			  						<div class="flex justify-between items-center">
-			  							<span class="text-md text-gray-500 mb-3">Back-End Development</span>
+			  							<span class="text-md text-gray-500 mb-3">Backend Development</span>
 			  							<span class="text-gray-500">70%</span>
 			  						</div>
 			  						<div class="relative">
@@ -152,11 +152,163 @@
 	  			</div>
   			</div>
   		</section>
-	  	<section>
-	  		<div class="flex">
-	  			<div class="lg:w-25"></div>
-	  		</div>
-	  	</section>
+
+		<section id="experiences" class="bg-white py-32">
+			<div class="container m-auto xl:w-[1200px] lg:w-[960px] w-full">
+				<p class="text-center text-emerald-500 font-bold text-2xl mb-8">Project Experiences</p>
+				<p class="text-center font-bold text-3xl tracking-wide leading-10 mb-20">I have collaborated with various teams to deliver impactful projects.</p>
+
+				<div class="flex flex-wrap justify-center items-stretch">
+					<div class="flex flex-col xl:w-1/3 lg:w-1/2 w-full px-4 mb-8">
+						<div class="flex items-center justify-center mb-4">
+							<i class="fas fa-box text-6xl" style="color:orange;"></i>
+						</div>
+						<div class="h-full p-6 rounded-lg shadow-lg">
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4">courier & delivery service web applications</h3>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold">Frontend Development </h5>
+								<p class="text-gray-600">Focused on responsive pages and reusable UI components.</p>
+							</div>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold mb-2">Tech</h5>
+								<div>
+									<i class="fab fa-html5 text-3xl me-3" style="color:#E34F26;"></i>
+									<i class="fab fa-css3-alt text-3xl me-3" style="color:#1572B6;"></i>
+									<i class="fab fa-sass text-3xl me-3" style="color:#CC6699;"></i>
+									<i class="fab fa-bootstrap text-3xl me-3" style="color:#7952B3;"></i>
+									<i class="fab fa-js text-3xl me-3" style="color:#F7DF1E;"></i>
+									<i class="fab fa-laravel text-3xl me-3" style="color:#FF2D20;"></i>
+								</div>
+								<!-- <p class="text-sm text-gray-500 mb-3">Tech: HTML · CSS · JavaScript · React · Tailwind · Git</p> -->
+							</div>
+							<ul class="list-disc text-gray-500 text-sm px-3">
+								<li>Built responsive page & design for courier & logistic platform</li>
+								<li>Connect API with admin panel with CMS for admin update the content</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="flex flex-col xl:w-1/3 lg:w-1/2 w-full px-4 mb-8">
+						<div class="flex items-center justify-center mb-4">
+							<i class="fas fa-car-side text-6xl" style="color:blue;""></i>
+						</div>
+						<div class="h-full p-6 rounded-lg shadow-lg">
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Vehicle Imobilizer System <br> (Third Party)</h3>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold">Backend Development</h5>
+								<p class="text-gray-600">Focused on HTTP Request, database design, API connection & writing backend function</p>
+							</div>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold mb-2">Tech</h5>
+								<div>
+									<i class="fab fa-laravel text-3xl me-3" style="color:#FF2D20;"></i>
+									<i class="fal fa-link text-gray-500 text-3xl me-3"></i>
+								</div>
+							</div>
+							<ul class="list-disc text-gray-500 text-sm px-3">
+								<li>Learn RESTful API concept, make the route more structure & easy to integrate</li>
+								<li>Using third-party provided API to control the vehicle to prevent stolen</li>
+								<li>Using API to write function let admins to remote the vehicle, vehicle able / unable to start, tracking the vehicle location or speed & know the driver stop for how long</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="flex flex-col xl:w-1/3 lg:w-1/2 w-full px-4 mb-8">
+						<div class="flex items-center justify-center mb-4">
+							<i class="fas fa-mobile text-6xl text-gray-500"></i>
+						</div>
+						<div class="h-full p-6 rounded-lg shadow-lg">
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Mobile App Development <br> (With Team)</h3>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold">Web App Development</h5>
+								<p class="text-gray-600">Focused on UI/UX make APP user friendly. Ensure user experiences is good. Link API function for the application.</p>
+							</div>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold mb-2">Tech</h5>
+								<div>
+									<i class="fab fa-html5 text-3xl me-3" style="color:#E34F26;"></i>
+									<i class="fab fa-css3-alt text-3xl me-3" style="color:#1572B6;"></i>
+									<i class="fab fa-sass text-3xl me-3" style="color:#CC6699;"></i>
+									<i class="fab fa-bootstrap text-3xl me-3" style="color:#7952B3;"></i>
+									<i class="fab fa-js text-3xl me-3" style="color:#F7DF1E;"></i>
+									<i class="fab fa-laravel text-3xl me-3" style="color:#FF2D20;"></i>
+									<i class="fab fa-vuejs text-3xl me-3" style="color: #42b883;"></i>
+									<img class="bg-gray-500 rounded-lg" alt="Apache Cordova Logo" width="80" src="img/cordova_logo_normal_large.png" />
+								</div>
+							</div>
+							<ul class="list-disc text-gray-500 text-sm px-3">
+								<li>Built web app using "website language", then use cordova to implment in mobile mode</li>
+								<li>Link website existing function to web app</li>
+								<li>Open mobile permission for web app</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="flex flex-col xl:w-1/3 lg:w-1/2 w-full px-4 mb-8">
+						<div class="flex items-center justify-center mb-4">
+							<i class="fas fa-file-csv text-6xl text-emerald-500"></i>
+						</div>
+						<div class="h-full p-6 rounded-lg shadow-lg">
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Warehouse Part Analysis Report</h3>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold">Data Analysis</h5>
+								<p class="text-gray-600">According to warehouse staff provided previous excel data. Using VBA macro generate a new version report import into SAP</p>
+							</div>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold mb-2">Tech</h5>
+								<div>
+									<img alt="VBA Logo" width="40" src="img/vba-iconpng.png" />
+								</div>
+							</div>
+							<ul class="list-disc text-gray-500 text-sm px-3">
+								<li>Learn VBA syntax by reading previous dataset given</li>
+								<li>Using SAP provided data, generate a new data format easy for warehouse staff to understand and filter the useless data</li>
+								<li>Improve the VBA coding</li>
+							</ul>
+						</div>
+					</div>
+					
+					<div class="flex flex-col xl:w-1/3 lg:w-1/2 w-full px-4 mb-8">
+						<div class="flex items-center justify-center mb-4">
+							<i class="fas fa-mobile text-6xl text-gray-500"></i>
+						</div>
+						<div class="h-full p-6 rounded-lg shadow-lg">
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Mobile App Development <br> (With Team)</h3>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold">Web App Development</h5>
+								<p class="text-gray-600">Focused on UI/UX make APP user friendly. Ensure user experiences is good. Link API function for the application.</p>
+							</div>
+							<div class="mb-3">
+								<h5 class="text-gray-600 font-bold mb-2">Tech</h5>
+								<div>
+									<i class="fab fa-html5 text-3xl me-3" style="color:#E34F26;"></i>
+									<i class="fab fa-css3-alt text-3xl me-3" style="color:#1572B6;"></i>
+									<i class="fab fa-sass text-3xl me-3" style="color:#CC6699;"></i>
+									<i class="fab fa-bootstrap text-3xl me-3" style="color:#7952B3;"></i>
+									<i class="fab fa-js text-3xl me-3" style="color:#F7DF1E;"></i>
+									<i class="fab fa-laravel text-3xl me-3" style="color:#FF2D20;"></i>
+									<i class="fab fa-vuejs text-3xl me-3" style="color: #42b883;"></i>
+									<img class="bg-gray-500 rounded-lg" alt="Apache Cordova Logo" width="80" src="img/cordova_logo_normal_large.png" />
+								</div>
+							</div>
+							<ul class="list-disc text-gray-500 text-sm px-3">
+								<li>Built web app using "website language", then use cordova to implment in mobile mode</li>
+								<li>Link website existing function to web app</li>
+								<li>Open mobile permission for web app</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="w-full px-4 mt-4">
+						<div class="bg-emerald-50 border border-emerald-100 p-6 rounded-lg text-center">
+							<p class="font-semibold text-emerald-600 mb-2">Want to collaborate?</p>
+							<p class="text-gray-600 mb-4">I enjoy team work and contributing to UI and frontend architecture — available for freelance or team roles.</p>
+							<a href="mailto:YOUR_EMAIL_HERE" class="inline-block bg-emerald-500 text-white px-4 py-2 rounded">Contact me</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
   	</main>
 </body>
 </html>
