--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 	</header>
 	<!-- Full width header, after scrolldown then fade down -->
 	<!-- <header class="sticky top-0">123</header> -->
-
-	<!-- https://images.pexels.com/photos/1040880/pexels-photo-1040880.jpeg?auto=compress&cs=tinysrgb&w=1200 -->
   	<main>
   		<section class="container m-auto xl:w-[1200px] lg:w-[960px] w-full">
   			<div class="pt-20 pb-40 flex flex-wrap items-center justify-center">
@@ -158,7 +156,7 @@
 				<p class="text-center text-emerald-500 font-bold text-2xl mb-8">Project Experiences</p>
 				<p class="text-center font-bold text-3xl tracking-wide leading-10 mb-20">I have collaborated with various teams to deliver impactful projects.</p>
 
-				<div class="flex flex-wrap justify-center items-stretch">
+				<div class="flex flex-wrap justify-center items-stretch" style="grid-row-gap: 3rem;">
 					<div class="flex flex-col xl:w-1/3 lg:w-1/2 w-full px-4 mb-8">
 						<div class="flex items-center justify-center mb-4">
 							<i class="fas fa-box text-6xl" style="color:orange;"></i>
@@ -179,7 +177,6 @@
 									<i class="fab fa-js text-3xl me-3" style="color:#F7DF1E;"></i>
 									<i class="fab fa-laravel text-3xl me-3" style="color:#FF2D20;"></i>
 								</div>
-								<!-- <p class="text-sm text-gray-500 mb-3">Tech: HTML · CSS · JavaScript · React · Tailwind · Git</p> -->
 							</div>
 							<ul class="list-disc text-gray-500 text-sm px-3">
 								<li>Built responsive page & design for courier & logistic platform</li>
@@ -193,7 +190,7 @@
 							<i class="fas fa-car-side text-6xl" style="color:blue;""></i>
 						</div>
 						<div class="h-full p-6 rounded-lg shadow-lg">
-							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Vehicle Imobilizer System <br> (Third Party)</h3>
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Vehicle Imobilizer <br> (Third Party)</h3>
 							<div class="mb-3">
 								<h5 class="text-gray-600 font-bold">Backend Development</h5>
 								<p class="text-gray-600">Focused on HTTP Request, database design, API connection & writing backend function</p>
@@ -218,9 +215,9 @@
 							<i class="fas fa-mobile text-6xl text-gray-500"></i>
 						</div>
 						<div class="h-full p-6 rounded-lg shadow-lg">
-							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Mobile App Development <br> (With Team)</h3>
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4"> Shipping & Tracking App <br> (With Team)</h3>
 							<div class="mb-3">
-								<h5 class="text-gray-600 font-bold">Web App Development</h5>
+								<h5 class="text-gray-600 font-bold">Mobile Web App Development</h5>
 								<p class="text-gray-600">Focused on UI/UX make APP user friendly. Ensure user experiences is good. Link API function for the application.</p>
 							</div>
 							<div class="mb-3">
@@ -237,6 +234,7 @@
 								</div>
 							</div>
 							<ul class="list-disc text-gray-500 text-sm px-3">
+								<li>Converted an existing website into a mobile application available on App Store and Google Play, enabling users to install and use it like a native app</li>
 								<li>Built web app using "website language", then use cordova to implment in mobile mode</li>
 								<li>Link website existing function to web app</li>
 								<li>Open mobile permission for web app</li>
@@ -273,10 +271,10 @@
 							<i class="fas fa-mobile text-6xl text-gray-500"></i>
 						</div>
 						<div class="h-full p-6 rounded-lg shadow-lg">
-							<h3 class="text-xl mb-1 font-bold capitalize mb-4">Mobile App Development <br> (With Team)</h3>
+							<h3 class="text-xl mb-1 font-bold capitalize mb-4"> Cage Dropoff / Pickup Feature</h3>
 							<div class="mb-3">
-								<h5 class="text-gray-600 font-bold">Web App Development</h5>
-								<p class="text-gray-600">Focused on UI/UX make APP user friendly. Ensure user experiences is good. Link API function for the application.</p>
+								<h5 class="text-gray-600 font-bold">Fullstack Development</h5>
+								<p class="text-gray-600">Focused on manage collection point data and order routing development. </p>
 							</div>
 							<div class="mb-3">
 								<h5 class="text-gray-600 font-bold mb-2">Tech</h5>
